--- a/src/scss/modules/_social.scss
+++ b/src/scss/modules/_social.scss
@@ -2,6 +2,7 @@
 		margin-top: 20px;
 		margin-bottom: 20px;
 		display: inline-block;
+		min-width: 162px;
 		&.block {
 			display: block;
 			width: 100%;
