--- a/statamic/_themes/main/css/main.css
+++ b/statamic/_themes/main/css/main.css
@@ -3451,25 +3451,21 @@ footer .footer-divider {
   height: 400px; }
 
 #map {
-  margin-top: 79px;
   height: 1000px;
   width: 100%; }
 
-.Select {
-  border: 1px solid transparent; }
-
 .Select.is-open .Select-control {
-  border: 1px solid #25282A;
   border-radius: 0; }
+
+.sort-bar *:focus, .sort-bar *:active {
+  outline: none !important; }
 
 .Select-placeholder, .sort-bar, .Select-menu {
   font-family: "Copernicus-Medium";
   font-size: 13px; }
 
 .Select-menu {
-  box-shadow: none;
-  border: 1px solid #25282A;
-  border-top: 1px solid #ECEBEC; }
+  box-shadow: none; }
 
 .Select-menu-outer {
   border-radius: 0; }
@@ -4107,6 +4103,7 @@ footer .footer-divider {
 
 .agent-individual main {
   padding: 30px;
+  min-height: 650px;
   background-color: #fff; }
 
 @media (min-width: 1280px) {
@@ -5648,11 +5645,46 @@ input.radio, select.radio {
   height: 64px;
   width: 64px; }
 
+#properties {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-flow: column nowrap;
+  -ms-flex-flow: column nowrap;
+  flex-flow: column nowrap;
+  -webkit-flex: 1 1 auto;
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto; }
+
+#properties:first-child {
+  min-height: 100%; }
+
 #properties section {
   padding-top: 54px; }
 
 #properties section a {
   margin: 0; }
+
+.property_container {
+  width: 100%;
+  -webkit-flex: 1 1 auto;
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto; }
+
+.property_search {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-flow: column nowrap;
+  -ms-flex-flow: column nowrap;
+  flex-flow: column nowrap;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  min-height: 100%; }
+
+.property_grid {
+  min-height: 100%; }
 
 .tile-container {
   padding-top: 60px;
@@ -6438,7 +6470,8 @@ section.faq {
 .social {
   margin-top: 20px;
   margin-bottom: 20px;
-  display: inline-block; }
+  display: inline-block;
+  min-width: 162px; }
 
 .social.block {
   display: block;
