--- a/statamic/_themes/main/templates/map.html
+++ b/statamic/_themes/main/templates/map.html
@@ -10,7 +10,14 @@
 	}
 	var infos = [];
 	var locations = [
-	{{ entries:listing folder="properties/new-york/rental"}}
+	if $('#buy').hasClass('active') {
+		{{ entries:listing folder="properties/new-york/sale"}}
+		console.log('buy')
+	}
+	else {
+		{{ entries:listing folder="properties/new-york/rental"}}
+		console.log('rent')
+	}
 	[
 	'{{ title }}', 
 	{{ location }}
@@ -22,22 +29,6 @@
 	],
 	{{ /entries:listing }}
 	];
-
-	function initialize() {
-
-		var myOptions = {
-			center: new google.maps.LatLng(33.890542, 151.274856),
-			zoom: 8,
-			mapTypeId: google.maps.MapTypeId.ROADMAP
-
-		};
-		var map = new google.maps.Map(document.getElementById("default"),
-			myOptions);
-
-		setMarkers(map,locations)
-
-	}
-
 
 
 	function setMarkers(map,locations){
@@ -67,14 +58,13 @@
 
 
 			var content = 
+				'<a href=' + '"' + url + '"' + 'class=' + '"' + 'property_box' + '"' + '>' +
+					'<div class="image-wrap">' +
+						'<div class="preview-image" style=' + '"background-image: url(' + image + '">' + '</div>' +
+					'</div>' +
+				'</a>';
 
-			'<a href=' + '"' + url + '"' + 'class=' + '"' + 'property_box' + '"' + '>' +
-				'<div class="image-wrap">' +
-					'<div class="preview-image" style=' + '"background-image: url(' + image + '">' + '</div>' +
-				'</div>' +
-			'</a>';
-
-			var infowindow = new google.maps.InfoWindow()
+			var infowindow = new google.maps.InfoWindow();
 
 
 			google.maps.event.addListener(marker,'click', (function(marker,content,infowindow){ 
@@ -108,6 +98,10 @@
 			/* blank the array */
 			infos.length = 0;
 		}
+	}
+
+	function toggleMarkers() {
+		marker.setVisible(false); 
 	}
 
 </script>
