--- a/statamic/_themes/main/templates/property.html
+++ b/statamic/_themes/main/templates/property.html
@@ -104,7 +104,7 @@
 				<div class="property-carousel">
 					{{ photo_carousel }}
 					<div>
-						<img src="{{ path src="{{ value }}"}}">
+						<img data-lazy="{{ transform path width="900" height="600" src="{{ value }}"}}">
 					</div>
 					{{ /photo_carousel}}
 				</div>
