--- a/statamic/_themes/main/css/main.css
+++ b/statamic/_themes/main/css/main.css
@@ -5730,6 +5730,9 @@ input.radio, select.radio {
   width: 89.16667%;
   float: left; }
 
+.carousel_tile_2.main_tile .slick-next:before, .carousel_tile_2.agent_tile .slick-next:before {
+  margin-left: -20px; }
+
 @media (min-width: 1280px) {
   .carousel_tile_2 {
     margin-left: 16.66667%;
